# sf-text-formatter

./: README.md  pyproject.toml  requirements.txt
src/salesforce_text_formatter/: __init__.py  config_text_formatter.py  curated_data_sql_formatter.py  format.py
src/salesforce_text_formatter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
