[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sf-text-formatter"
version = "1.0.0"
authors = [
  { name="Daniel Lambert", email="daniel.lambert@deliveryhero.com" },
]
description = "A text formatting package for salesforce data engineers"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "wordninja==2.0.0",
]

[project.urls]
"Homepage" = ""
"README.md" = ""
